# literumilo-rust

./: Cargo.toml  README.md
src/: check_word.rs  ending.rs  entry.rs  lib.rs  macros.rs  main.rs  morpheme_list.rs  scan_morphemes.rs  suffix.rs  vortaro.rs
