[package]
name = "literumilo"
version = "0.1.0"
authors = ["Klivo <indriko@yahoo.com>"]
edition = "2018"
description = "A spell checker and morphological analyzer for Esperanto."
license = "See README"
documentation = "https://github.com/Indrikoterio/literumilo-rust"
homepage = "https://github.com/Indrikoterio/literumilo-rust"
repository = "https://github.com/Indrikoterio/literumilo-rust"
readme = "README.md"
keywords = ["Esperanto", "literumilo", "spellchecker", "analyzer", "morphemes"]
categories = ["command-line-utilities", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
